fix: header size is too big on blog contents.

--- a/src/styles/content.css
+++ b/src/styles/content.css
@@ -3,24 +3,24 @@
 @tailwind utilities;
 
 @layer base {
-    body {
-        line-height: 1.5;
-    }
-
     h1 {
-        @apply text-4xl font-bold mt-4 mb-2
+        @apply text-4xl font-bold
     }
 
     h2 {
-        @apply text-3xl font-bold mt-3 mb-1
+        @apply text-3xl font-bold
     }
 
     h3 {
-        @apply text-2xl font-bold mt-2
+        @apply text-2xl font-bold
     }
 
     h4 {
-        @apply text-xl font-bold mt-1
+        @apply text-xl font-bold
+    }
+
+    p {
+        @apply mt-2 mb-2
     }
 
     pre {
